changed mf to ta

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -33,7 +33,7 @@
       />
     </g>
   </svg>
-  <span class="logo-text">Motion Factory ᵇᵉᵗᵃ</span>
+  <span class="logo-text">Text Animator</span>
 </div>
 <nav class="header">
   <ul>
