--- a/src/app/template/components/register/register.component.html
+++ b/src/app/template/components/register/register.component.html
@@ -23,7 +23,7 @@
           <div class="submit-loader"></div>
         </ng-template>
       </div>
-      <span class="terms-of-use">By signing up you agree to the Motion Factory
+      <span class="terms-of-use">By signing up you agree to the Text Animator
         <br>
         <a>terms of use</a>
       </span>
