--- a/src/app/animation/components/animation-header/animation-header.component.html
+++ b/src/app/animation/components/animation-header/animation-header.component.html
@@ -1,5 +1,5 @@
 <div class="animation-header-wrap">
-  <div class="animation-header-background">
+  <!-- <div class="animation-header-background">
     <div class="container">
       <p class="haeder-text">Enjoy plenty. Go for Premium.</p>
       <p class="sub-header-text">Make your video projects easily with Animation</p>
@@ -10,5 +10,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
