--- a/src/app/animation/components/animation-header/animation-header.component.scss
+++ b/src/app/animation/components/animation-header/animation-header.component.scss
@@ -4,8 +4,8 @@
 :host{
     color: #FFFFFF;
     .animation-header-wrap {
-        width: 100%;
-        height: 149px;
+        // width: 100%;
+        // height: 149px;
         overflow: hidden;
         position: relative;
         display: flex;
