--- a/src/app/animation/components/animation-home/animation-home.component.scss
+++ b/src/app/animation/components/animation-home/animation-home.component.scss
@@ -8,8 +8,8 @@
         width:100%;
         height: 34px;
         mf-animation-filter{
-            float: right;
-            margin-right: 15px;
+            float: left;
+            margin-left: 193px;
             margin-top:20px;
         }
     }
