--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,61 +1,8 @@
 <div class="logo-container">
-  <svg
-    class="logo-svg"
-    xmlns="http://www.w3.org/2000/svg"
-    xmlns:xlink="http://www.w3.org/1999/xlink"
-    viewBox="0 0 21.144 14.588"
-  >
-    <defs>
-      <style>
-        .cls-1 {
-          fill-rule: evenodd;
-          fill: url(#linear-gradient);
-        }
-      </style>
-      <linearGradient
-        id="linear-gradient"
-        x1="0.5"
-        x2="0.5"
-        y2="1"
-        gradientUnits="objectBoundingBox"
-      >
-        <stop offset="0" stop-color="#3e72ff" />
-        <stop offset="1" stop-color="#1e5bff" />
-      </linearGradient>
-    </defs>
-    <g id="Symbol_75" data-name="Symbol 75" transform="translate(-12 -54)">
-      <path
-        id="Path_6"
-        data-name="Path 6"
-        class="cls-1"
-        d="M19.846,3.012,17.268.569a2.19,2.19,0,0,0-3,0L3.134,11.082a.271.271,0,0,1-.455-.2V6.112A1.364,1.364,0,0,1,3.117,5.1L5.088,3.248a.541.541,0,0,1,.724,0L8.053,5.353,9.974,3.517,6.857.569a2.19,2.19,0,0,0-3,0L1.28,3.012A4,4,0,0,0,0,5.96v6.149A2.489,2.489,0,0,0,.775,13.9h0a2.361,2.361,0,0,0,3.268,0L15.331,3.248a.541.541,0,0,1,.724,0L18.027,5.1a1.4,1.4,0,0,1,.438,1.011v4.768a.271.271,0,0,1-.455.2L13.107,6.5,11.153,8.335l5.93,5.576a2.4,2.4,0,0,0,3.285,0,2.46,2.46,0,0,0,.775-1.786V5.977A4.092,4.092,0,0,0,19.846,3.012Z"
-        transform="translate(12 54.025)"
-      />
-    </g>
-  </svg>
   <span class="logo-text">Text Animator</span>
 </div>
-<nav class="header">
+<!-- <nav class="header">
   <ul>
-    <li
-      class="active"
-      routerLinkActive="active"
-      routerLink="/dashboard/template"
-      (mouseenter)="menuItemMouseEnter($event)"
-      (mouseleave)="menuItemMouseLeave($event)"
-      (click)="handleMenuClick()"
-    >
-      <a>Manage</a>
-    </li>
-    <li
-      routerLinkActive="active"
-      routerLink="/dashboard/market"
-      (mouseenter)="menuItemMouseEnter($event)"
-      (mouseleave)="menuItemMouseLeave($event)"
-      (click)="handleMenuClick()"
-    >
-      <a>Discover</a>
-    </li>
     <li
       routerLinkActive="active"
       routerLink="/dashboard/animation/"
@@ -66,17 +13,9 @@
       <a>Animation</a>
     </li>
   </ul>
-</nav>
+</nav> -->
 <span [class.hideMe]="!settingIsNotActive" class="header-menu-underline"></span>
 <div class="icon-container">
-  <mf-general-button
-    [text]="'Feedback'"
-    [fontSize]="'10px'"
-    [padding]="'5px 19px'"
-    [type]="'border'"
-    [borderColor]="'#383838'"
-    (clicked)="linkedToJoinUs()"
-  ></mf-general-button>
   <div (click)="openSignOutDialog($event)">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <g data-name="Group 3760" transform="translate(-513 -39)">
