fixed setting problem

--- a/src/app/setting/components/aftereffects-setting-container/aftereffects-setting-container.component.html
+++ b/src/app/setting/components/aftereffects-setting-container/aftereffects-setting-container.component.html
@@ -11,7 +11,7 @@
   <div class="container-content">
     <div class="inner-container">
       <mf-animationbuilder-setting [controllers]="controllers" (change)="handleChange($event)"></mf-animationbuilder-setting>
-      <mf-layer-setting [controllers]="controllers" (change)="handleChange($event)"></mf-layer-setting>
+      <!-- <mf-layer-setting [controllers]="controllers" (change)="handleChange($event)"></mf-layer-setting> -->
     </div>
   </div>
 </div>
