--- a/src/app/animation/components/animation-item/animation-item.component.html
+++ b/src/app/animation/components/animation-item/animation-item.component.html
@@ -1,4 +1,4 @@
-<div class="animation-item-wrap">
+<div class="animation-item-wrap" (dblclick)="ondblclick()">
     <div class="item-background">
         <mf-animation-item-preview [previewImageSrc]="previewImage"></mf-animation-item-preview>
     </div>
