--- a/src/app/animation/components/animation-item-loader/animation-item-loader.component.scss
+++ b/src/app/animation/components/animation-item-loader/animation-item-loader.component.scss
@@ -63,7 +63,7 @@
           display: none !important;
       }
       ::ng-deep  .item-background{
-        transform: scale(0.8);
+        transform: (0.8);
     }
   }
 
