--- a/src/app/animation/components/animation-home/animation-home.component.scss
+++ b/src/app/animation/components/animation-home/animation-home.component.scss
@@ -4,6 +4,10 @@
     height: 100vh;
     width: 100vw;
     overflow-y: hidden;
+    .main{
+    height: 100vh;
+    width: 100vw;
+    overflow-y: hidden;
     .filter{
         width:100%;
         height: 34px;
@@ -21,5 +25,18 @@
         background-color: #262626;
         display: flex;
         box-sizing: border-box;
+    }
+}
+    .no-pack{
+        margin: auto;
+        text-align: center;
+        transform: translateY(-50%);
+        position: relative;
+        top: 50%;
+        font-size: 15px;
+        font-family: 'Open Sans-semibold',
+        sans-serif;
+        color: #999999;
+        cursor: pointer;
     }
 }
