--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,3 +95,11 @@ html {
   height: 100%;
   z-index: 999999;
 }
+.ng-spinner-icon{
+  width: 24px !important;
+  height: 24px !important;
+}
+.ng-spinner {
+  right: 10px !important; 
+  top: 9px !important;
+}
