--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="logo-container">
-  <span class="logo-text">Text Animator</span>
+  <span class="logo-text">TEXT ANIMATOR</span>
 </div>
 <!-- <nav class="header">
   <ul>
