--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,11 @@
   src: url("assets/fonts/opensans-bold.ttf");
   font-weight: 600;
 }
+@font-face {
+  font-family: "Oswald-regular";
+  src: url("assets/fonts/oswald-regular.ttf");
+  font-weight: 500;
+}
 
 * {
   font-weight: inherit;
