some style change o fix installplugin

--- a/src/app/animation/components/animation-item/animation-item.component.html
+++ b/src/app/animation/components/animation-item/animation-item.component.html
@@ -13,7 +13,7 @@
                 (doOnClose)="onClosedDropDown()"></mf-drop-down>
         </div>
         <div class="row-2">
-            <span class="category">{{item.category}}</span>
+            <span class="category">{{getCategoryName(item.category)}}</span>
         </div>
     </div>
 </div>
